# dodatok

./: .eslintrc.cjs  .eslintrc.json  README.md  compose.toml  compose.yaml  db.Dockerfile  haproxy.Dockerfile  haproxy.cfg  make-compose-file  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
client/: .eslintignore  .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  lingui.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  test.js  test.ts  tsconfig.json  vite.config.ts
client-ported-stuff-removed/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
client-ported-stuff-removed/src/: hooks.server.ts
client-ported-stuff-removed/src/lib/: config.ts  utils.ts
client-ported-stuff-removed/src/lib/components/: FileInput.svelte  IconPasswordInput.svelte  IconTextInput.svelte  Navbar.svelte
client-ported-stuff-removed/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
client-ported-stuff-removed/src/translations/: fi-FI.json
client/helpers/: package.json  rollup.config.ts  tsconfig.json
client/helpers/src/: i18n.ts  index.ts
client/scripts/: generate-i18n.ts
client/src/: app.d.ts  app.html  hooks.server.ts  hooks.ts
client/src/i18n/: index.ts
client/src/i18n/en/: messages.mjs  messages.po
client/src/i18n/fi/: messages.mjs  messages.po
client/src/lib/: accountSocket.ts  alerts.ts  auth.ts  cache.ts  config.ts  error.ts  errors.ts  messages.ts  socket.ts  sockets.ts  stores.ts  time.ts  transitions.ts  types.ts  utils.ts  validation.ts
client/src/lib/components/: Checkbox.svelte  ErrorPage.svelte  FileInput.svelte  Heading.svelte  IconPasswordInput.svelte  IconTextInput.svelte  Message.svelte  Navbar.svelte
client/src/lib/styles/: globals.scss  main.scss
client/src/params/: lang.ts
client/src/routes/: +layout.svelte  __error.svelte  __layout.svelte  account.svelte  index.svelte  sign-up.svelte
client/src/routes/[[lang=lang]]/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte
client/src/routes/[[lang=lang]]/photo/: +page.svelte
client/src/routes/account/: +page.svelte
client/src/routes/api/: [...path].ts
client/src/routes/api/[...path]/: +server.ts
client/src/routes/sign-up/: +page.svelte
client/src/translations/: en-US.json  fi-FI.json
server/: .gitignore  Cargo.toml  Dockerfile  config.py  config.test.toml  config.toml  pyproject.toml.bak  schema.sql
server-py/: .pyre_configuration  config.py  pyproject.toml  pyrightconfig.json  schema.sql  test.py
server-py/.pyre/: pyre.stderr
server-py/api/: __init__.py  _services.py  account.py  auth.py  json.py  sockets.py  types.py  users.py  utils.py  validation.py
server-py/stubs/: aioredis.pyi  asyncpg.pyi  socketio.pyi
server-py/stubs/minio/: __init__.pyi  deleteobjects.pyi  error.pyi
server-py/stubs/miscreant/aes/: siv.pyi
server-py/stubs/qrcode/: __init__.pyi
server-py/stubs/qrcode/image/: svg.pyi
server/api/: __init__.py  account.py  auth.py  services.py  users.py  utils.py  validation.py  websocket.py
server/macros/: Cargo.toml
server/macros/src/: alert_enum.rs  lib.rs  sql_enum.rs  test_with_client.rs
server/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  routes.rs  util.rs  websocket.rs
server/src/routes/: account.rs  auth.rs  test.rs  users.rs
server/tests/: auth.rs
server/tests/setup/: mod.rs
server/tests/util/: mod.rs
src/: app.html  declarations.d.ts  hooks.ts
src/lib/: Menu.svelte  cache.ts  errors.ts  i18n.ts  index.ts  transitions.ts  types.ts  validation.ts
src/lib/components/: IconInput.svelte  IconPasswordInput.svelte  IconTextInput.svelte  Navbar.svelte
src/lib/styles/: globals.scss  main.scss
src/lib/translations/: en-US.json  fi-FI.json
src/routes/: __error.svelte  __layout.svelte  account.svelte  index.svelte  sign-up.svelte
