[package]
name = "dodatok"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros"]

[dependencies]
macros = { path = "macros" }

aes-gcm-siv = "0.10.3"
base64 = "0.13.0"
bitflags = "1.3.2"
blake2 = "0.10.4"
chrono = "0.4.19"
deadpool-postgres = "0.10.2"
futures = "0.3.21"
futures-util = "0.3.21"
hex = "0.4.3"
poem = { version = "1.3.30", features = ["cookie", "test", "websocket"] }
postgres-types = { version = "0.2.3", features = ["derive", "with-chrono-0_4"] }
rand = "0.8.5"
redis = { version = "0.21.5", features = ["tokio-comp"] }
rust-argon2 = "1.0.0"
secstr = "0.5.0"
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
totp-lite = "1.0.3"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[dev-dependencies]
async-trait = "0.1.53"
test-context = "0.1.3"
