[package]
name = "dodatok"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros"]

[dependencies]
macros = { path = "macros" }

aes-gcm-siv = "0.11.1"
argon2 = "0.4.1"
base64 = "0.21.0"
bitflags = "1.3.2"
blake3 = "1.3.3"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
deadpool-postgres = { version = "0.10.5", features = ["serde"] }
futures = "0.3.25"
futures-util = "0.3.25"
hex = "0.4.3"
password-hash = { version = "0.4.2", features = ["alloc"] }
poem = { version = "1.3.52", features = ["cookie", "multipart", "test", "websocket"] }
postgres-types = { version = "0.2.4", features = ["derive", "with-chrono-0_4"] }
rand = "0.8.5"
redis = { version = "0.22.3", features = ["tokio-comp"] }
secstr = "0.5.1"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
toml = "0.6.0"
totp-lite = "2.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
async-trait = "0.1.63"
test-context = "0.1.4"
